--- a/static/css/diello.css
+++ b/static/css/diello.css
@@ -23,6 +23,7 @@ h3 {
     padding     : 0;
     font-family : Nunito;
     font-size   : 20px;
+    color: #579e18;
 }
 
 a {
@@ -34,19 +35,21 @@ img {
 }
 
 h1 > a {
-    color                   : #ccc;
+    color                   : #579e18;
     text-decoration         : none; 
 }
 
+h1 > a:hover {
+    color                   : #63c210;
+}
+
 h3 > a {
-    color                   : #ccc;
-    text-decoration         : underline;
-    text-decoration-color   : #de0066;
-    -webkit-text-decoration-color   : #de0066;
+    color                   : #579e18;
+    text-decoration         : none;
 }
 
 h3 > a:hover {
-    background-color: #de0066;
+    color   : #63c210;
 }
 
 small > a{
@@ -55,12 +58,12 @@ small > a{
     justify-content :flex-end;
     text-align      : right;
     font-size       : 16px;
-    color           : #ff9800;
+    color           : #666;
     text-decoration : none;
 }
 
 small > a:hover {
-    color           : #de0066;
+    color           : #579e18;
     background-color: #000;
 }
 
@@ -128,11 +131,11 @@ footer {
 }
 
 .navigation > a:hover {
-    border-bottom   : 3px solid #ff2388;
+    border-bottom   : 3px solid #579e18;
 }
 
 .navigation > .current {
-    border-bottom   : 3px solid #de0066;
+    border-bottom   : 3px solid #579e18;
 }
 
 .less {
@@ -144,11 +147,15 @@ footer {
     font-size   : 18px;
 }
 .pages > a {
-    color           : #de0066;
+    color           : #579e18;
 }
 
 .pagelink {
     color       : #666;
+}
+
+.pagelink:hover {
+    color       : #579e18;
 }
 
 .line-dotted {
@@ -166,4 +173,8 @@ footer {
     color               : #ccc;
     font-family         : Nunito;
     border-radius       : 16px;
+}
+
+.green {
+    color: #579e18;
 }
