--- a/static/css/diello.css
+++ b/static/css/diello.css
@@ -52,21 +52,6 @@ h3 > a:hover {
     color   : #63c210;
 }
 
-small > a{
-    display         : inline-flex;
-    width           : 100%;
-    justify-content :flex-end;
-    text-align      : right;
-    font-size       : 16px;
-    color           : #666;
-    text-decoration : none;
-}
-
-small > a:hover {
-    color           : #579e18;
-    background-color: #000;
-}
-
 .em {
     font-size   : 18px;
 } 
@@ -185,4 +170,10 @@ footer {
 
 .green-link:hover {
     color: #63c210;
+}
+
+.flex-left {
+    justify-content: end; 
+    display: flex;
+    padding-bottom: 1em;
 }
