--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
                 {{ range (.Paginate $pages 5).Pages }}
                     <article>
                         <h3><a href="{{ .RelPermalink }}">&#10132; {{ .Title }}</a></h3>
-                        <div class="em">{{ .Summary }}</div>
+                        <div class="em">{{ replace (replace .Summary "<p>" "<div class='paragraph'>") "</p>" "</div>" | safeHTML }}</div>
                         <div class="less flex-left">
                             <time>Published: {{ .PublishDate.Format "January 2, 2006" }}</time>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;{{ .ReadingTime }} minute read&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="pagelink" href="{{ .RelPermalink }}">Read More &gt;&gt;</a>
                         </div>
