--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -18,7 +18,7 @@
             {{ partial "nav.html" . }}
             <div>
                 <article>
-                    <h3>{{ .Title }}</h3>
+                    <h2 class="green">{{ .Title }}</h2>
                     <div class="em">{{ .Content | safeHTML }}</div>
                     <br />
                 <article>
