--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,3 +1,9 @@
+<div class="dark-toggler">
+    <svg version="1.1" fill="currentColor" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+        <g><g><g id="_x34_37._Progress"><g><path d="M500,10C229.4,10,10,229.4,10,500c0,270.6,219.4,490,490,490c270.6,0,490-219.4,490-490C990,229.4,770.6,10,500,10z M108,500c0-216.5,175.5-392,392-392v784C283.5,892,108,716.5,108,500z"/></g></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></g>
+    </svg>
+</div>
+
 <script src="{{.Site.BaseURL | relLangURL}}js/translation-note.js" type="text/javascript"></script>  
 <script src="{{.Site.BaseURL | relLangURL}}js/vendor/highlight.min.js"></script>  
 <script>hljs.initHighlightingOnLoad();</script>
