--- a/layouts/shortcodes/tn.html
+++ b/layouts/shortcodes/tn.html
@@ -1,20 +1,1 @@
-{{ if .IsNamedParams }}
-{{ $id := now.UnixNano }}
-<!-- Trigger/Open The Modal -->
-<span onclick="getTLNote('{{ $id }}')" class="translation-note">{{ .Get "label" }}</span>
-
-<!-- The Modal -->
-<div id="{{ $id }}" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="close" onclick="closeTLNote('{{ $id }}')">&times;</span>
-        <h3>Translation Note(s)</h3>
-      </div>
-      <div class="modal-body">
-          {{ .Get "note" }}
-      </div>
-    </div>
-</div>
-
-{{ end }}
+{{ if .IsNamedParams }}{{ $id := now.UnixNano }}<span onclick="getTLNote('{{ $id }}')" class="translation-note">{{ .Get "label" }}</span><!-- The Modal --><div id="{{ $id }}" class="modal"><!-- Modal content --><div class="modal-content"><div class="modal-header"><span class="close" onclick="closeTLNote('{{ $id }}')">&times;</span><h3>Translation Note(s)</h3></div><div class="modal-body">{{ .Get "note" }}</div></div></div>{{ end }}
