--- a/static/css/diello-light.css
+++ b/static/css/diello-light.css
@@ -5,9 +5,9 @@ html, body {
     padding             : 0;
     font-family         : Nunito;
     font-size           : 18px;
-    color               : #ccc;
+    color               : #000;
     line-height         : 200%;
-    background-color    : #000;
+    background-color    : #fff;
     width               : 100vw;
     max-width           : 100vw;
     overflow-x          : hidden;
@@ -23,11 +23,11 @@ h3 {
     padding     : 0;
     font-family : Nunito;
     font-size   : 20px;
-    color: #63c210;
+    color: #579e18;
 }
 
 a {
-    color           : #fff;
+    color           : #000;
 }
 
 img {
@@ -35,21 +35,21 @@ img {
 }
 
 h1 > a {
-    color                   : #63c210;
+    color                   : #579e18;
     text-decoration         : none; 
 }
 
 a:hover {
-    color                   : #579e18;
+    color                   : #63c210;
 }
 
 h2 > a {
-    color                   : #ccc;
+    color                   : #000;
     text-decoration         : none;
 }
 
 h3 > a {
-    color                   : #63c210;
+    color                   : #579e18;
     text-decoration         : none;
 }
 
@@ -64,7 +64,7 @@ footer {
     width           : 100%;
     font-family     : Nunito;
     font-size       : 18px;
-    color           : #999;
+    color           : #000;
 }
 
 
@@ -112,16 +112,16 @@ footer {
     margin          : 0;
     padding         : 0 20px;
     height          : 100%;
-    color           : #fff;
+    color           : #000;
     text-decoration : none;
 }
 
 .navigation > a:hover {
-    border-bottom   : 3px solid #579e18;
+    border-bottom   : 3px solid #63c210;
 }
 
 .navigation > .current {
-    border-bottom   : 3px solid #63c210;
+    border-bottom   : 3px solid #579e18;
 }
 
 .less {
@@ -152,7 +152,7 @@ footer {
 }
 
 .green {
-    color: #63c210;
+    color: #579e18;
 }
 
 .green-link {
@@ -170,7 +170,7 @@ footer {
     display:inline;
     text-decoration: underline;
     text-decoration-style: dashed;
-    text-decoration-color: #fff;
+    text-decoration-color: #000;
 }
 
 .translation-note:hover {
@@ -199,7 +199,7 @@ footer {
 .modal-content {
     position: fixed;
     bottom: 0;
-    background-color: #000;
+    background-color: #fff;
     border-top: 3px solid #63c210;
     width: 100%;
     -webkit-animation-name: slideIn;
@@ -218,7 +218,7 @@ footer {
 
 .close:hover,
 .close:focus {
-    color: #63c210;
+    color: #fff;
     text-decoration: none;
     cursor: pointer;
 }
