--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -4,7 +4,7 @@
     </svg>
 </div>
 
-<script src="{{.Site.BaseURL | relLangURL}}js/translation-note.js" type="text/javascript"></script>  
+<script src="{{.Site.BaseURL | relLangURL}}js/pvctl.js" type="text/javascript"></script>  
                                                        
 {{ if .Site.Params.ga }}
 <script>                                             
