--- a/layouts/_default/pin.html
+++ b/layouts/_default/pin.html
@@ -23,8 +23,8 @@
                     <article>
                         <h3><a href="{{ .RelPermalink }}">&#10132; {{ .Title }}</a></h3>
                         <div class="em">{{ .Summary }}</div>
-                        <div class="less flex-left">
-                            <time>Published: {{ .PublishDate.Format "January 2, 2006" }}</time>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;{{ .ReadingTime }} minute read&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="pagelink" href="{{ .RelPermalink }}">Read More &gt;&gt;</a>
+                        <div class="less align-right">
+                            <time>{{ .PublishDate.Format "January 2, 2006" }}</time>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;{{ .ReadingTime }} minute read&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="pagelink" href="{{ .RelPermalink }}">Read More &gt;&gt;</a>
                         </div>
                     </article>
                 {{ end }}
