--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,10 +10,11 @@
     <meta name="keywords" content="{{ with .Keywords }} {{- delimit . ", " -}} {{ end }}">
     <meta name="description" content="{{ with .Description }} {{- . -}} {{ end }}">
     {{ end }}
-    <link rel="stylesheet" href="{{.Site.BaseURL | relLangURL}}css/highlight.min.css">
-    <link rel="stylesheet" href="{{.Site.BaseURL | relLangURL}}css/normalize.css">
-    <link rel="stylesheet" href="{{.Site.BaseURL | relLangURL}}css/diello.css">
-    <link rel="stylesheet" href="{{.Site.BaseURL | relLangURL}}css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="{{.Site.BaseURL | relLangURL}}css/pvctl.css">
     {{ if .Site.Params.google_ad_client }}
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
