--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,6 +48,8 @@
                 {{ end }}
             </div>
             <div class="line-dotted"></div>
+            {{ template "_internal/disqus.html" . }}
+            <div class="line-dotted"></div>
             {{ partial "footer.html" . }}
         </div>
         {{ partial "banner.html" . }}
