separated comments as partial

--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -25,6 +25,7 @@
                 <article>
             </div>
             <div class="line-dotted"></div>
+            {{ partial "comments.html" . }}
             {{ partial "footer.html" . }}
         </div>
         {{ partial "banner.html" . }}
