--- a/layouts/pin/single.html
+++ b/layouts/pin/single.html
@@ -32,6 +32,7 @@
                 </article>
             </div>
             <div class="line-dotted"></div>
+            {{ partial "comments.html" . }}
             {{ partial "footer.html" . }}
         </div>
         {{ partial "banner.html" . }}
