add disable to comment box

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
                 {{ end }}
             </div>
             <div class="line-dotted"></div>
-            {{ partial "comments.html" . }}
+            {{- partial "comments.html" -}}
             {{ partial "footer.html" . }}
         </div>
         {{ partial "banner.html" . }}
