--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -25,7 +25,8 @@
                 <article>
             </div>
             <div class="line-dotted"></div>
-            {{ partial "comments.html" . }}
+            {{ $comments := .Params.comments }}
+            {{- partial "comments.html" (dict "context" . "comments" .Params.comments ) -}}
             {{ partial "footer.html" . }}
         </div>
         {{ partial "banner.html" . }}
