--- a/layouts/pin/single.html
+++ b/layouts/pin/single.html
@@ -21,7 +21,10 @@
                 <article>
                     <h3>{{ .Title }}</h3>
                     <div class="less">
-                        <time>Published: {{ .PublishDate.Format "January 2, 2006" }}</time>
+                        <time>Published {{ .PublishDate.Format "January 2, 2006" }}</time>{{ if .Params.poster }}&nbsp;&nbsp;
+                        |&nbsp;&nbsp;&nbsp;Author(s):
+                        {{ range $index, $element := .Params.poster }}{{ if gt $index 0}}, {{ end }}
+                        <a class="pagelink" href="/translator/{{ $element }}">{{ $element }}</a>{{ end }}{{ end }}
                     </div>
                     <div class="em">{{ .Content | safeHTML }}</div>
                     <br />
