--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
                 {{ $pages := where site.RegularPages "Type" "in" "novel" }}
                 {{ range (.Paginate $pages 5).Pages }}
                     <article>
-                        <h3><a href="{{ .RelPermalink }}">&#187; {{ .Title }}{{if .Params.subtitle}}: {{ .Params.subtitle }}{{end}}</a></h3>
+                        <h3><a href="{{ .RelPermalink }}">&#187; {{ .Params.Category }} &#8212; {{ .Title }}{{if .Params.subtitle}}: {{ .Params.subtitle }}{{end}}</a></h3>
                         <div class="em">{{ .Summary | safeHTML }}</div>
                         <div class="less align-right">
                             <time>{{ .PublishDate.Format "January 2, 2006" }}</time>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;{{ .ReadingTime }} minute read&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="pagelink" href="{{ .RelPermalink }}">More &gt;&gt;</a>
